Fix bug when nav active, fix nav scroll bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ body.menu-active {
 /*Header styles*/
 header {
 	position: relative;
+	top: 0;
 	width: 100%;
 	border-bottom: 1px solid #555;
 	z-index: 2;
@@ -88,7 +89,7 @@ nav#mobile-nav {
 	position: fixed;
 	z-index: 1;
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 55px);
 	top: -100%;
 	transition: all 0.5s;
 }
